# config-vault

./: .dockerignore  .gitignore  ConfigVault.sln  Dockerfile  LICENSE  README.md  docker-compose.yml  gitignore
docs/design/: config-vault.design.md
docs/plans/: 2026-02-02-config-vault.plan.md  2026-02-04-docker-configvault-api.md  2026-02-04-dockerfile-arm64-design.md  2026-02-04-dockerfile-arm64-refactor.md
docs/reviews/: vault-management-api.review.md
scripts/: docker-smoke.ps1  dockerfile-multiarch-check.ps1
sdks/: README.md
sdks/csharp/: ConfigVault.Sdk.sln  README.md
sdks/csharp/ConfigVault.Sdk/: Class1.cs  ConfigChangedEventArgs.cs  ConfigVault.Sdk.csproj  ConfigVaultClient.cs  ConfigVaultClientOptions.cs  ConfigWatcher.cs  IConfigVaultClient.cs
sdks/csharp/ConfigVault.Sdk.Tests/: ConfigVault.Sdk.Tests.csproj  ConfigVaultClientTests.cs  ConfigWatcherTests.cs  ModelsAndExceptionsTests.cs  ServiceCollectionExtensionsTests.cs  UnitTest1.cs
sdks/python/: README.md  pyproject.toml
sdks/python/src/configvault/: __init__.py  client.py  exceptions.py  models.py  watcher.py
sdks/python/tests/: test_client.py  test_models.py  test_watcher.py
sdks/typescript/: README.md  package-lock.json  package.json
sdks/typescript/src/: client.ts  errors.ts  (+3 more)
src/ConfigVault.Api/: ConfigVault.Api.csproj  ConfigVault.Api.http  Program.cs  appsettings.json
src/ConfigVault.Core/: Class1.cs  ConfigVault.Core.csproj  ConfigurationChangedEventArgs.cs  ConfigurationService.cs  IConfigurationService.cs
src/ConfigVault.Tests/: ConfigVault.Tests.csproj  UnitTest1.cs
(+49 files in other folders)
