[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "configvault"
version = "0.1.0"
description = "Python SDK for ConfigVault API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/configvault"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]